[package]
name = "hcb-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.14"
regex = "1.8"
lazy_static = "1.4"
once_cell = "1.17"
chrono = "0.4.42"
